soft delete course

--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -11,9 +11,9 @@
             TheSun
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="courses/create">Create Course</a>
+            <a class="dropdown-item" href="/courses/create">Create Course</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">My Courses</a>
+            <a class="dropdown-item" href="/me/stored-courses">My Courses</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="#">Logout</a>
           </div>
