--- a/src/resources/views/me/trash.hbs
+++ b/src/resources/views/me/trash.hbs
@@ -1,9 +1,8 @@
-<form class="mt-4" name="container-form" method="POST" action="/courses/handle-form-actions">
-  <h2>Stored Courses</h2>
-  {{#if deletedCount}}
-    <a href="/me/trash">Trash({{deletedCount}})</a>
+<form class="mt-4" name="container-form" method="POST" action="/me/handle-form-actions">
+  <h2>Trash</h2>
 
-  {{/if}}
+    <a href="/me/stored-courses">Back</a>
+
   <div class="mt-4 d-flex align-items-center">
     <div class="form-check">
       <input class="form-check-input" type="checkbox" value="" id="checkbox-all">
@@ -13,22 +12,23 @@
     </div>
     <select class="form-control form-control-sm checkbox-select-all-options" name="action" required>
       <option value="">Option</option>
-      <option value="delete">Delete</option>
+      <option value="restore">Restore</option>
+      <option value="delete">Destroy</option>
     </select>
     <button class="btn btn-primary btn-sm checkAllSubmit-btn" disabled>Confirm</button>
 
   </div>
- 
+
   <table class="table mt-4">
     <thead>
       <tr>
+
         <th scope="col" colspan="2">#</th>
         <th scope="col">Name</th>
         <th scope="col">Image</th>
         <th scope="col" colspan="2">Slug</th>
       </tr>
     </thead>
-    
     <tbody>
       {{#each courses}}
       <tr>
@@ -41,19 +41,18 @@
           <td>{{this.image}}</td>
           <td>{{this.slug}}</td>
           <td>
-            <a href="/courses/edit/{{this._id}}" class="btn btn-link">Edit</a>
+            <a href="" class="btn-restore" id="btnRestore" data-id="{{this._id}}">Restore</a>
             <a href="" class="btn btn-link" data-toggle="modal" data-target="#delete-course-modal" data-id="{{this._id}}">Delete</a>
           </td>
       </tr>
       {{else}}
       <tr>
         <td colspan="5" class="text-center">
-          Bạn chưa có khóa học nào. <a href="/courses/create">Đăng khóa học</a>
+          <p>Thùng rác trống!</p>
         </td>
       </tr>
       {{/each}}
     </tbody>
-    
   </table>
 </form>
 
@@ -64,13 +63,13 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Delete course</h5>
+        <h5 class="modal-title" id="delete-course-modal">Destroy course</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body">
-        Are you sure?
+        This action cannot be undone. Are you sure?
       </div>
       <div class="modal-footer">
         <button type="button" id="btn-delete-course" class="btn btn-danger">Delete</button>
@@ -82,12 +81,15 @@
 </div>
 
 <form method="POST" name="delete-form" action=""></form>
+<form method="POST" name="restore-form" action=""></form>
 
 <script>
   document.addEventListener('DOMContentLoaded', function() {
     var courseId
     var deleteForm = document.forms['delete-form']
+    var restoreForm = document.forms['restore-form']
     var btnDeleteCourse = document.getElementById('btn-delete-course')
+    var btnRestore = $('.btn-restore')
     var checkboxAll = $('#checkbox-all')
     var courseItemCheckbox = $('input[name="courseIds[]"]')
     var checkAllSubmitBtn = $('.checkAllSubmit-btn')
@@ -100,23 +102,30 @@
     })
     
     btnDeleteCourse.onclick = function() {
-      deleteForm.action = '/courses/' + courseId + '?_method=DELETE'
+      deleteForm.action = '/courses/destroy/' + courseId + '?_method=DELETE'
       deleteForm.submit()
     }
-    //CheckboxAll clicked
+
+    btnRestore.click(function(e) {
+      e.preventDefault()
+      var courseId = $(this).data('id')
+      restoreForm.action = '/courses/restore/' + courseId + '?_method=PATCH'
+      restoreForm.submit()
+    })
+
+    //Checkbox all -> check alll item
     checkboxAll.change(function () {
       var isCheckedAll = $(this).prop('checked')
       courseItemCheckbox.prop('checked', isCheckedAll)
       renderCheckAllSubmitBtn()
     })
-    //Course item checkbox changed
-
+    //Check all item -> checkbox all
     courseItemCheckbox.change(function() {
       var isCheckedAll = courseItemCheckbox.length === $('input[name="courseIds[]"]:checked').length
       checkboxAll.prop('checked', isCheckedAll)
       renderCheckAllSubmitBtn()
     })
-
+    //function submitform
     function renderCheckAllSubmitBtn() {
       var checkedCount = $('input[name="courseIds[]"]:checked').length
       if (checkedCount) {
